# wm811k-application

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/phase3_ml/classical_svm/: svm_rbf_5fold_summary.txt  svm_rbf_label_encoder.joblib
results/phase4_dl/resnet50_baseline/: resnet50_baseline_summary.txt
scripts/: 04_preprocess_one_wafer.py  05_export_sample_images.py
scripts/Phase_1-Dataset_explaration/: 01_read_wm811k.py  02_show_wafer.py  03_clean_labels.py  04_preprocess_one_wafer.py  05_export_sample_images.py
scripts/Phase_2-Preprocessing_on_wm811k/: 01_single_wafer.py  02_batch_features.py  03_view_features.py  04_export_visual_samples.py  05_feature_analysis.py
scripts/Phase_3_Machine_learning/: 01_prepare_ml_data.py  02_train_baselines.py  03_train_classical_svm.py  04_prepare_dl_image_dataset.py
scripts/Phase_3_Model_Languages/: 02_train_baselines.py
scripts/Phase_4_Deep_learning/: 01_handle_class_imbalance.py  02_train_resnet50_baseline.py
src/wm811k/: __init__.py  components.py  dl_data.py  dl_imbalance.py  evaluation.py  features.py  labels.py  masks.py  ml_data.py  models.py  paths.py  plots.py
